# latynkatar

./: .gitignore  .pre-commit-config.yaml  README.adoc  README.md  noxfile.py  pyproject.toml
.github/workflows/: code-tests.yml  release-publishing.yml
docs/: CONTRIBUTING.adoc
src/latynkatar/: __init__.py  const.py  converters.py  latynkatar.py
src/latynkatar/converters/: __init__.py  abs_converter.py  cyr_lat.py  lat_cyr.py
src/latynkatar/utils/: cyr_to_lat.py  lat_to_cyr.py
tests/: test_deprecation.py  test_tekst.py
tests/CyrLat/: test_tekst.py
tests/LatCyr/: test_text.py  test_zycznuja.py
tests/cyr_lat/: test_consonants.py  test_texts.py  test_vovels.py
tests/data/: bahdanovicz.py  kulaszou.py  pamylka.py
tests/lat_cyr/: test_consonants.py  test_texts.py
